# PFE-cva6

./: Dockerfile  Makefile  README.md
core/: cva6.sv  cvxif_fu.sv  decoder.sv  ex_stage.sv  id_stage.sv  load_store_unit.sv  perf_counters.sv  scoreboard.sv
core/cache_subsystem/: wt_cache_subsystem.sv
core/cvxif_example/: cvxif_example_coprocessor.sv
core/cvxif_example/include/: cvxif_instr_pkg.sv
core/frontend/: instr_queue.sv
core/include/: ariane_pkg.sv  cv32a6_ima_sv32_fpga_config_pkg.sv
corev_apu/fpga/scripts/: run_cva6_ooc.tcl  run_cva6_sim.tcl
corev_apu/fpga/xilinx/: ariane_xlnx_ip.yml
corev_apu/fpga/xilinx/xlnx_clk_gen/tcl/: run.tcl
corev_apu/src/: ariane.sv  axi_dcache_adapter.sv
corev_apu/tb/: ariane_tb.sv  ariane_testharness.sv  tb_cva6_zybo_z7_20.sv
reports_cva6_fpga_impl/: cva6_fpga.check_timing.rpt  cva6_fpga.timing.rpt  cva6_fpga.timing_WORST_100.rpt  cva6_fpga.utilization.rpt
sw/: CMakeLists.txt
sw/app/: .gitignore  Makefile
sw/app/mnist/: main.c
sw/app/mnist_adac/: NetworkPropagate.c  main.c  perf.h
sw/app/mnist_base/: crc32.h  main.c
sw/app/mnist_clean/: main.c  misc.c  network.c
sw/bsp/config/: link.ld
sw/cva6/: fpga_platform_config.h  link.ld  syscalls.c
sw/mnist_adac/: config.h  cpp_utils.c  layer0.S  layer1.S  layer2.S  layer3.S  main.c  misc.c  misc.h  model.h  network.c  network.h  network.py  perf.c  perf.h  resources.h  xadac.c  xadac.h
sw/mnist_adac/resources/: img4618.c  l2_weight.c  l3_weight.c
sw/mnist_base/: NetworkPropagate.c  crc32.c  main.c
sw/mnist_clean/: config.h  main.c  misc.h  model.c  model.h  network.c  network.h
sw/mnist_clean/resources/: all.h  conv1_weight.h  conv2_weight.h  fc1_weight.h  fc2_weight.h  img0003.c  img0003.h  img4618.c  img4618.h  l0_weight.c  l0_weight.h  l1_weight.c  l1_weight.h  l2_weight.h  l3_weight.h
sw/utils/: bin2mem.py
util/: bin2mem.py  mem2coe.py  rv_xadac
util/gcc-toolchain-builder/: 0001-xadac-extension.patch  build-toolchain.sh  get-toolchain.sh
util/gcc-toolchain-builder/config/: gcc-13.1.0-baremetal.sh  gcc-master-baremetal.sh
xadac/: Makefile  xadac.sv  xadac_if.sv  xadac_mux.sv  xadac_pkg.sv  xadac_vactv.sv  xadac_vbias.sv  xadac_vclobber.sv  xadac_vload.sv  xadac_vmacc.sv  xadac_vrf.sv  xadac_vrf_phy.sv
xadac/bhv/: format.hpp  main.cpp  mini-rv32ima.h  types.hpp
xadac/rtl/: xadac.sv  xadac_axi_cut.sv  xadac_axi_skid.sv  xadac_axi_wizard.sv  xadac_cut.sv  xadac_if_cut.sv  xadac_if_skid.sv  xadac_mux.sv  xadac_pkg.sv  xadac_sink.sv  xadac_skid.sv  xadac_vactv.sv  xadac_vbias.sv  xadac_vclobber.sv  xadac_verilator.sv  xadac_vload.sv  xadac_vmacc.sv  xadac_vrf.sv  xadac_vrf_phy.sv
